--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 1</title>
+    <style>
+        .bg-yellow {
+            background-color: yellow;
+        }
+    </style>
 </head>
 
-<body>
+<body class="bg-yellow">
 
     <h1>Hello world!!!!!111!!!11!!</h1>
     <h5>A really cool sub title</h5>
